feat: handle payment
